Fix copy background on mobile

--- a/content/themes/handbook/css/global.css
+++ b/content/themes/handbook/css/global.css
@@ -2336,6 +2336,7 @@ code {
  * Github-like theme for Prism.js
  * @author Luke Askew http://github.com/lukeaskew
  */
+/* stylelint-disable */
 code,
 code[class*='language-'],
 pre[class*='language-'] {
@@ -2365,19 +2366,16 @@ pre[class*="language-"] {
   margin: 1em 0;
   overflow: visible;
   padding: 2rem; }
-  pre[class*='language-'].wrong .copy,
-  pre[class*='language-'].right .copy {
-    background: transparent !important; }
-    pre[class*='language-'].wrong .copy:hover, pre[class*='language-'].wrong .copy:focus,
-    pre[class*='language-'].right .copy:hover,
-    pre[class*='language-'].right .copy:focus {
-      background: transparent !important; }
   pre[class*='language-'].wrong {
-    background: #ffe6d8 !important; }
+    background-color: #ffe6d8 !important; }
+    pre[class*='language-'].wrong .copy {
+      background-color: #ffe6d8 !important; }
     pre[class*='language-'].wrong .comment {
       color: #a81919 !important; }
   pre[class*='language-'].right {
-    background: #dbffd8 !important; }
+    background-color: #dbffd8 !important; }
+    pre[class*='language-'].right .copy {
+      background-color: #dbffd8 !important; }
     pre[class*='language-'].right .comment {
       color: #19a857 !important; }
 
